--- a/Client/online-auction/index.html
+++ b/Client/online-auction/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="https://sp.yimg.com/ib/th?id=OIP.repPfAblhpvVonnheawfqQAAAA&pid=Api&w=148&h=148&c=7&dpr=2&rs=1" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+    <title>online-Auction</title>
   </head>
   <body>
     <div id="root"></div>
